test_regress/t/t_gate_basic_specify_bad.out
%Warning-RISEFALLDLY: t/t_gate_basic.v:26:12: Unsupported: rising/falling/turn-off delays. Using the first delay
   26 |    nand  #(2,3)   ND0 (nd0, a[0], b[0], b[1]);
      |            ^
                      ... For warning description see https://verilator.org/warn/RISEFALLDLY?v=latest
                      ... Use "/* verilator lint_off RISEFALLDLY */" and lint_on around source to disable this message.
%Warning-SPECIFYIGN: t/t_gate_basic.v:50:27: Ignoring unsupported: specify block construct
   50 |       (nt0 *> nt0) = (0, 0);
      |                           ^
                     ... For warning description see https://verilator.org/warn/SPECIFYIGN?v=latest
                     ... Use "/* verilator lint_off SPECIFYIGN */" and lint_on around source to disable this message.
%Warning-SPECIFYIGN: t/t_gate_basic.v:60:32: Ignoring unsupported: specify block construct
   60 |     (A1 *> Q) = (a$A1$Y, a$A1$Y);
      |                                ^
%Error: Exiting due to
